--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                   <div class="embed-responsive" >
                      <video autoplay loop controls>
                         <source src="videos/teaser.mp4">
+                       can't be supported
                     </video>
                 </div>
         
