--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-video u-video-1">
                   <div class="embed-responsive" >
-                     <video autoplay loop controls>
+                     <video playsinline autoplay muted loop controls>
                         <source src="videos/teaser.mp4">
-                       can't be supported
                     </video>
                 </div>
         
