--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-video u-video-1">
                   <div class="embed-responsive" >
-                     <video playsinline autoplay muted loop controls>
+                     <video autoplay muted loop controls>
                         <source src="videos/teaser.mp4">
                     </video>
                 </div>
