--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;">
   <head>
  
-    <meta http-equiv="Refresh" content="2; url=public/index.html">
+    <meta http-equiv="Refresh" content="2" url="public/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Home</title>
