--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
- 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Home</title>
@@ -140,7 +138,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-video u-video-1">
                   <div class="embed-responsive" >
-                     <video autoplay muted loop controls>
+                     <video autoplay loop controls>
                         <source src="videos/teaser.mp4">
                     </video>
                 </div>
