--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-video u-video-1">
                   <div class="embed-responsive" >
                      <video autoplay loop controls muted>
-                        <source src="videos/teaser.mp4">
+                        <source src="videos/teaser.mp4" type="video/mp4">
                     </video>
                 </div>
         
